--- a/toko/templates/products/product_detail.html
+++ b/toko/templates/products/product_detail.html
@@ -1,7 +1,58 @@
 {% extends 'base.html' %}
-
 {% block content %}
+    <div class="container-fluid">
+    <div class="content-wrapper">
+        <div class="item-container">
+            <div class="container">
+                <div class="col-md-8">
+                    <h2>{{ object }} </h2>
+                    {% for img in object.productimage_set.all %}
+                        <img src="{{ img.image.url }}" >
 
-    {{ object }}
+                    {% endfor %}
+                </div>
+                <div class="col-md-4">
+                    <h4>${{ object.prices }}</h4>
+                    {% if object.productvariation_set.all.count > 1 %}
+                        <select class="form-control" id="sel1">
+                            {% for i in object.productvariation_set.all %}
+                                <option value="{{ i.id }}">{{ i }}</option>
+                            {% endfor %}
+                        </select>
+                    {% endif %}
+                    <br>
+                    <a href="#">AddChart</a>
+                </div>
+            </div>
+            <div class="container-fluid">
+                <div class="col-md-12 product-info">
+                    <ul id="myTab" class="nav nav-tabs nav_tabs">
+                        <li class="active"><a href="#service-one" data-toggle="tab">DESCRIPTION</a></li>
+                    </ul>
+                    <div id="myTabContent" class="tab-content">
+                        <div class="tab-pane fade in active" id="service-one">
+                            <section class="container product-info col-md-12 warp_text">
+                                {{ object.description|safe }}
+                            </section>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 {% endblock content %}
