add share product to media sosial and on onchange price variation

--- a/toko/templates/base.html
+++ b/toko/templates/base.html
@@ -14,6 +14,8 @@
     <![endif]-->
 
     {% block css %}
+    {% load fontawesome %}
+    {% fontawesome_stylesheet %}
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
 
