--- a/toko/templates/products/detail.html
+++ b/toko/templates/products/detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+
 {% block content %}
     <div class="container-fluid">
     <div class="content-wrapper">
@@ -7,20 +8,25 @@
                 <div class="col-md-8">
                     <h2>{{ product }} </h2>
                     {% for photo in product.photos.all %}
-                        <img src="{{ photo.image.url }}" >
+                        <img src="{{ photo.image.avatar.url  }}" >
                     {% endfor %}
                 </div>
                 <div class="col-md-4">
-                    <h4>${{ product.prices }}</h4>
+                    <h4 class="price_detail">${{ product.price }}</h4>
                     {% if product.variations.all %}
                         <select class="form-control" id="sel1">
                             {% for variation in product.variations.all %}
-                                <option value="{{ variation.name }}">{{ variation }}</option>
+                                <option value="{{ variation.price }}">{{ variation }}</option>
                             {% endfor %}
                         </select>
                     {% endif %}
                     <br>
                     <a href="#">AddChart</a>
+                    <hr>
+                    Share:<br>
+                <a href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}">
+                <span class="fa fa-facebook fa-2x"></span>
+                </a>
                 </div>
             </div>
             <div class="container-fluid">
