--- a/toko/templates/products/detail.html
+++ b/toko/templates/products/detail.html
@@ -26,6 +26,8 @@
         <a href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}">
         <span class="fa fa-facebook fa-2x"></span>
         </a>
+        <hr>
+        Related Category
       </div>
     </div>
     <div class="container-fluid">
