--- a/toko/templates/products/list.html
+++ b/toko/templates/products/list.html
@@ -1,14 +1,16 @@
 {% extends 'base.html' %}
-
 {% block content %}
-<table class="table">
-<tbody>
-  {% for product in  products %}
-<tr>
-    <td><a href=" {{ product.get_absolute_url }} ">{{ product }}</a>  </td>
-</tr>
-    {% endfor %}
-</tbody>
-
-</table>
+<div class="row">
+  {% for product in products %}
+  <div class="col-sm-6">
+    <div class="thumbnail">
+      <h4><a href=" {{ product.get_absolute_url }} ">{{ product.name }}</a></h4>
+      <img class="image-responsive" src="{{ product.get_image_list_url  }}" ><br>
+      <div class="caption">
+        <h3>{{ product.categories.first }}</h3>
+      </div>
+    </div>
+  </div>
+  {% endfor %}
+</div>
 {% endblock %}
