resolved issue and add product featured

--- a/toko/templates/pages/home.html
+++ b/toko/templates/pages/home.html
@@ -1,1 +1,51 @@
 {% extends "base.html" %}
+<style>
+  {% block style %}
+  .jumbotron {
+  /*background-image: url("{{ featured.photos.first.image.url }}");*/
+  background-repeat: no-repeat;
+  width: 100%;
+  max-width:100%;
+  background-size: cover;
+  background-position-y: -272px;
+  overflow: hidden;
+  }
+  {% endblock %}
+</style>
+{% block jumbotron %}
+{% if featured_image %}
+<div class="jumbotron">
+  <div class="col-sm-6  pull-left ">
+    <img vspace="20" class="jumbotronwidth" alt=" " src="{{ featured.get_image_featured_url }}">
+  </div>
+  <div class="col-sm-6">
+    <h1>
+      {{ featured.product.name }}
+    </h1>
+    <p>
+      {{ featured.product.description|safe }}
+    </p>
+    <p>
+      <a class="btn btn-primary btn-large" href="{{ featured.product.get_absolute_url }}">Learn more</a>&nbsp;
+    </p>
+  </div>
+</div>
+{% else %}
+<div class="jumbotron">
+  <div class="col-sm-6  pull-left ">
+    <img vspace="20" class="jumbotronwidth" alt=" " src="http://placehold.it/350x200">
+  </div>
+  <div class="col-sm-6">
+    <h1>
+    </h1>
+    <p>
+    </p>
+    <p>
+      <a class="btn btn-primary btn-large" href="{% url 'pages:home' %}">Learn more</a>&nbsp;
+    </p>
+  </div>
+</div>
+{% endif %}
+{% endblock %}
+{% block content %}
+{% endblock %}
