--- a/toko/templates/categories/detail.html
+++ b/toko/templates/categories/detail.html
@@ -1,13 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h2>{{ category }}</h2>
+<h2>All Product Category {{ category }}</h2>
 
-<table class="table">
-{% for category in  category.products.all %}
-  <tr>
-      <td>{{ category }}</td>
-  </tr>
-{% endfor %}
-</table>
+<hr>
+<div class="row">
+  {% for product in category.products.all %}
+  <div class="col-sm-4">
+    {% include "products/product_thumbnails.html" with product=product %}
+  </div>
+  {% endfor %}
+</div>
+
 {% endblock %}
