--- a/toko/templates/base.html
+++ b/toko/templates/base.html
@@ -44,6 +44,9 @@
                 <a class="nav-link" href="{% url 'pages:home' %}">Home</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="{% url 'products:list' %}">Products</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="{% url 'about' %}">About</a>
               </li>
               <li class="nav-item">
