--- a/toko/templates/products/product_thumbnails.html
+++ b/toko/templates/products/product_thumbnails.html
@@ -1,6 +1,8 @@
 <div class="thumbnail">
       <h4><a href=" {{ product.get_absolute_url }} ">{{ product.name }}</a></h4>
-      <img class="image-responsive" src="{{ product.get_image_list_url  }}" ><br>
+      {% if product.primary_image %}
+      <img class="image-responsive" src="{{ product.primary_image.medium.url  }}" ><br>
+      {% endif %}
       <div class="caption">
         <h3>$ {{ product.price }}</h3>
       </div>
