--- a/toko/templates/base.html
+++ b/toko/templates/base.html
@@ -63,6 +63,11 @@
             <ul class="nav navbar-nav pull-xs-right">
               {% if request.user.is_authenticated %}
               <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fa fa-shopping-cart"></i>
+                      <span class="label label-danger">0</span>
+                     </a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="{% url 'users:detail' request.user.username  %}">{% trans "My Profile" %}</a>
               </li>
               <li class="nav-item">
