--- a/toko/templates/products/product_thumbnails.html
+++ b/toko/templates/products/product_thumbnails.html
@@ -1,9 +1,7 @@
-<div class="thumbnail">
-      <h4><a href=" {{ product.get_absolute_url }} ">{{ product.name }}</a></h4>
+      <h4><a href=" {{ product.get_absolute_url }}" class="thumbnail" >{{ product.name }}</a></h4>
       {% if product.primary_image %}
       <img class="image-responsive" src="{{ product.primary_image.medium.url  }}" ><br>
       {% endif %}
       <div class="caption">
         <h3>$ {{ product.price }}</h3>
       </div>
-</div>
